library/src/libqtextobject.h

typedef QMetaObject::Connection QMetaObject__Connection;
typedef QTextFrame::iterator QTextFrame__iterator;
typedef struct QMetaObject QMetaObject;
typedef struct QMetaObject__Connection QMetaObject__Connection;
typedef struct QTextBlock QTextBlock;
typedef struct QTextBlockFormat QTextBlockFormat;
typedef struct QTextBlockGroup QTextBlockGroup;
typedef struct QTextBlockUserData QTextBlockUserData;
typedef struct QTextCursor QTextCursor;
typedef struct QTextDocument QTextDocument;
typedef struct QTextFormat QTextFormat;
typedef struct QTextFrame QTextFrame;
typedef struct QTextFrameFormat QTextFrameFormat;
typedef struct QTextFrameLayoutData QTextFrameLayoutData;
typedef struct QTextFrame__iterator QTextFrame__iterator;
typedef struct QTextLayout QTextLayout;
typedef struct QTextObject QTextObject;
QTextFormat* QTextObject_Format(const QTextObject* self);
int QTextObject_FormatIndex(const QTextObject* self);
QTextDocument* QTextObject_Document(const QTextObject* self);
int QTextObject_ObjectIndex(const QTextObject* self);
QMetaObject* QTextBlockGroup_MetaObject(const QTextBlockGroup* self);
void* QTextBlockGroup_Metacast(QTextBlockGroup* self, const char* param1);
int QTextBlockGroup_Metacall(QTextBlockGroup* self, int param1, int param2, void** param3);
libqt_string QTextBlockGroup_Tr(const char* s);
libqt_string QTextBlockGroup_Tr2(const char* s, const char* c);
libqt_string QTextBlockGroup_Tr3(const char* s, const char* c, int n);
void QTextFrameLayoutData_OperatorAssign(QTextFrameLayoutData* self, QTextFrameLayoutData* param1);
void QTextFrameLayoutData_Delete(QTextFrameLayoutData* self);
QTextFrame* QTextFrame_new(QTextDocument* doc);
QMetaObject* QTextFrame_MetaObject(const QTextFrame* self);
void* QTextFrame_Metacast(QTextFrame* self, const char* param1);
int QTextFrame_Metacall(QTextFrame* self, int param1, int param2, void** param3);
libqt_string QTextFrame_Tr(const char* s);
void QTextFrame_SetFrameFormat(QTextFrame* self, QTextFrameFormat* format);
QTextFrameFormat* QTextFrame_FrameFormat(const QTextFrame* self);
QTextCursor* QTextFrame_FirstCursorPosition(const QTextFrame* self);
QTextCursor* QTextFrame_LastCursorPosition(const QTextFrame* self);
int QTextFrame_FirstPosition(const QTextFrame* self);
int QTextFrame_LastPosition(const QTextFrame* self);
QTextFrameLayoutData* QTextFrame_LayoutData(const QTextFrame* self);
void QTextFrame_SetLayoutData(QTextFrame* self, QTextFrameLayoutData* data);
libqt_list /* of QTextFrame* */ QTextFrame_ChildFrames(const QTextFrame* self);
QTextFrame* QTextFrame_ParentFrame(const QTextFrame* self);
QTextFrame__iterator* QTextFrame_Begin(const QTextFrame* self);
QTextFrame__iterator* QTextFrame_End(const QTextFrame* self);
libqt_string QTextFrame_Tr2(const char* s, const char* c);
libqt_string QTextFrame_Tr3(const char* s, const char* c, int n);
void QTextFrame_Delete(QTextFrame* self);
void QTextBlockUserData_OperatorAssign(QTextBlockUserData* self, QTextBlockUserData* param1);
void QTextBlockUserData_Delete(QTextBlockUserData* self);
QTextBlock* QTextBlock_new();
void QTextBlock_OperatorAssign(QTextBlock* self, QTextBlock* o);
bool QTextBlock_IsValid(const QTextBlock* self);
bool QTextBlock_OperatorEqual(const QTextBlock* self, QTextBlock* o);
bool QTextBlock_OperatorNotEqual(const QTextBlock* self, QTextBlock* o);
bool QTextBlock_OperatorLesser(const QTextBlock* self, QTextBlock* o);
int QTextBlock_Position(const QTextBlock* self);
int QTextBlock_Length(const QTextBlock* self);
bool QTextBlock_Contains(const QTextBlock* self, int position);
QTextLayout* QTextBlock_Layout(const QTextBlock* self);
void QTextBlock_ClearLayout(QTextBlock* self);
QTextBlockFormat* QTextBlock_BlockFormat(const QTextBlock* self);
int QTextBlock_BlockFormatIndex(const QTextBlock* self);
void QTextBlock_Delete(QTextBlock* self);